--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>Ссылки</h2>
     <ul>
       <li>
-        <a href="https://github.com/platofff" target="_blank">GitHub</a>
+        <a href="https://github.com/nouveau-nvc0" target="_blank">GitHub</a>
       </li>
       <li>
         <a href="https://vk.com/id560302519" target="_blank">VK</a>
